fix: fix styling on mobile devices

--- a/src/App.modules.scss
+++ b/src/App.modules.scss
@@ -1,5 +1,19 @@
 @import '~antd/dist/antd.css';
 
+@media screen and (max-width: 500px) {
+  .Wrapper{
+    display: 'flex';
+    padding-top: 0.5rem!important;
+  }
+  .Paper{
+    margin: 0.5rem!important;
+    padding: 0.5rem!important;
+  }
+  .Paper2{
+    margin: 0.5rem!important;
+  }
+}
+
 .Wrapper{
   display: 'flex';
   padding-top: 1rem;
@@ -25,4 +39,6 @@
   justify-content: center;
   justify-items: center;
   text-align: center;
+  margin: 0.5rem!important;
+
 }
